--- a/config.org
+++ b/config.org
@@ -502,6 +502,7 @@ Counsel and Swiper.
   (global-set-key (kbd "C-x l") 'counsel-locate)
   (global-set-key (kbd "C-S-o") 'counsel-rhythmbox)
   (define-key minibuffer-local-map (kbd "C-r") 'counsel-minibuffer-history)
+  (setq counsel-find-file-ignore-regexp "\\.pyc\\'")
 #+END_SRC
 
 Smex for M-x recently used commands.
