--- a/config.org
+++ b/config.org
@@ -914,7 +914,7 @@ Function to sort all entires in the current buffer, recursively.
   (add-to-list 'auto-mode-alist '("\\.h\\'" . c++-mode))
   (global-set-key (kbd "C-x c") 'compile)
 #+END_SRC
-** LISP
+** Lisp
 *** Common Lisp
 For arch install the sbcl and quicklisp packages.
 #+BEGIN_SRC bash tangle: no
