--- a/config.org
+++ b/config.org
@@ -930,9 +930,12 @@ Then within sbcl install SLIME
 #+END_SRC
 
 #+BEGIN_SRC emacs-lisp
-  (load (expand-file-name "/usr/lib/quicklisp/slime-helper.el"))
-  ;; Replace "sbcl" with the path to your implementation
-  (setq inferior-lisp-program "sbcl")
+    (if (string-equal system-type "darwin")
+        (load (expand-file-name "~/.roswell/helper.el"))
+      (progn
+        (load (expand-file-name "/usr/lib/quicklisp/slime-helper.el"))
+        ;; Replace "sbcl" with the path to your implementation
+        (setq inferior-lisp-program "sbcl")))
 #+END_SRC
 *** Scheme
 For arch install the guile package.
