--- a/config.org
+++ b/config.org
@@ -187,16 +187,6 @@ Enable button lock mode
           company-dabbrev-downcase nil)
     (global-company-mode 1)
     (global-set-key (kbd "C-<tab>") 'company-complete))
-
-  (use-package company-lsp
-    :requires company
-    :config
-    (push 'company-lsp company-backends)
-
-    ;; Disable client-side cache because the LSP server does a better job.
-    (setq company-transformers nil
-          company-lsp-async t
-          company-lsp-cache-candidates nil))
 #+END_SRC
 
 ** Company c-headers
@@ -798,6 +788,8 @@ Check if host system is running MacOS and bind super and meta if true.
 
    ;; Microsoft python-language-server support
    (use-package lsp-python-ms
+     :ensure t
+     :init (setq lsp-python-ms-auto-install-server t)
      :hook (python-mode . (lambda ()
                             (require 'lsp-python-ms)
                             (lsp-deferred))))
