--- a/config.org
+++ b/config.org
@@ -2,6 +2,16 @@
 #+TITLE: Emacs Configuration
 #+AUTHOR: Tobias Backer Dirks
 
+* About
+
+Welcome to my literate Emacs configuration file.
+
+This configuration was inspired by (read: large swathes copied from)
+- [[https://github.com/rememberYou/.emacs.d][rememberYou]] (=rememberYou=),
+- [[https://github.com/jwiegley/dot-emacs/][John Wiegley]] (=jwiegley=),
+- [[https://github.com/sachac][Sacha Chua]] (=sachac=),
+- [[https://github.com/angrybacon/dotemacs][Mathieu Marques]] (=angrybacon=).
+
 * Initialize Emacs
 
 ** Packages Sources
@@ -241,6 +251,624 @@ Use [[https://github.com/arcticicestudio/nord-emacs][nord-theme]] with [[https:/
   (scroll-bar-mode -1)            ; Disable the scroll bar
   (tool-bar-mode -1)              ; Disable the tool bar
   (tooltip-mode -1)              ; Disable the tooltips
+#+end_src
+
+* Languages
+
+** Arduino
+
+Major mode for editing Arduino sketches.
+
+#+begin_src emacs-lisp :tangle yes
+(use-package arduino-mode)
+#+end_src
+
+** C++
+
+In order to have a fast and stable environment, I recommend using [[#lsp][LSP]] as a
+client for LSP servers [[https://github.com/MaskRay/ccls][ccls]] and as server.
+
+To use =ccls= with GNU Emacs, you must first install it with the package manager
+of your operating system.
+
+#+begin_src emacs-lisp :tangle yes
+  (use-package ccls
+    :after projectile
+    :ensure-system-package ccls
+    :custom
+    (ccls-args nil)
+    (ccls-executable (executable-find "ccls"))
+    (projectile-project-root-files-top-down-recurring
+     (append '("compile_commands.json" ".ccls")
+             projectile-project-root-files-top-down-recurring))
+    :config (add-to-list 'projectile-globally-ignored-directories ".ccls-cache"))
+
+  (use-package google-c-style
+    :hook ((c-mode c++-mode) . google-set-c-style)
+           (c-mode-common . google-make-newline-indent))
+#+end_src
+
+To allow =ccls= to know the dependencies of your =.cpp= files with your =.h=
+files, it is important to provide an =compile.commands.json= file (or a =.ccls=
+file) at the root of your project.
+
+For this, nothing could be easier. If like me you use a =CMakeLists.txt= file
+for all your C++ projects, then you just need to install the =cmake= package on
+your operating system and to generate the =compile.commands.json= file, you have
+to do:
+
+#+begin_src bash
+  cmake -H. -BDebug -DCMAKE_BUILD_TYPE=Debug -DCMAKE_EXPORT_COMPILE_COMMANDS=YES
+  ln -s Debug/compile_commands.json
+#+end_src
+
+** CMake
+
+CMake is a cross-platform build system generator.
+
+#+begin_src emacs-lisp :tangle yes
+  (use-package cmake-mode
+    :mode ("CMakeLists\\.txt\\'" "\\.cmake\\'"))
+
+  (use-package cmake-font-lock
+    :after (cmake-mode)
+    :hook (cmake-mode . cmake-font-lock-activate))
+
+  (use-package cmake-ide
+    :after projectile
+    :hook (c++-mode . my/cmake-ide-find-project)
+    :preface
+    (defun my/cmake-ide-find-project ()
+      "Finds the directory of the project for cmake-ide."
+      (with-eval-after-load 'projectile
+        (setq cmake-ide-project-dir (projectile-project-root))
+        (setq cmake-ide-build-dir (concat cmake-ide-project-dir "build")))
+      (setq cmake-ide-compile-command
+            (concat "cd " cmake-ide-build-dir " && cmake .. && make"))
+      (cmake-ide-load-db))
+
+    (defun my/switch-to-compilation-window ()
+      "Switches to the *compilation* buffer after compilation."
+      (other-window 1))
+    :bind ([remap comment-region] . cmake-ide-compile)
+    :init (cmake-ide-setup)
+    :config (advice-add 'cmake-ide-compile :after #'my/switch-to-compilation-window))
+#+end_src
+
+** CSS – LESS – SCSS
+
+In order to have a fast and stable environment, I recommend using [[#lsp][LSP]] as a
+client for LSP servers and [[https://github.com/vscode-langservers/vscode-css-languageserver-bin][vscode-css-languageserver-bin]] as server.
+
+#+begin_src emacs-lisp :tangle yes
+  (use-package css-mode
+    :custom (css-indent-offset 2))
+
+  (use-package less-css-mode
+    :mode "\\.less\\'")
+
+  (use-package scss-mode
+    :mode "\\.scss\\'")
+#+end_src
+
+** CSV
+
+#+begin_src emacs-lisp :tangle yes
+  (use-package csv-mode)
+#+end_src
+
+** Docker
+
+I like to use Docker when I need to install various databases or other services
+that only work on a particular operating system while keeping my operating
+system clean.
+
+#+begin_src emacs-lisp :tangle yes
+  (use-package dockerfile-mode
+    :delight "δ "
+    :mode "Dockerfile\\'")
+#+end_src
+
+** Lisp
+
+*** Emacs Lisp
+
+#+begin_src emacs-lisp :tangle yes
+  (use-package elisp-mode :ensure nil :delight "ξ ")
+#+end_src
+
+**** Eldoc
+
+Provides minibuffer hints when working with Emacs Lisp.
+
+#+begin_src emacs-lisp :tangle yes
+  (use-package eldoc
+    :delight
+    :hook (emacs-lisp-mode . eldoc-mode))
+#+end_src
+
+*** Common Lisp
+
+For arch install the sbcl and quicklisp packages.
+#+begin_src bash tangle: no
+sudo pacman -S sbcl
+yay -S quicklisp
+echo '(load "/usr/lib/quicklisp/setup")' > ~/.sbclrc
+#+end_src
+
+Then within sbcl install SLIME
+#+begin_src tangle :no
+(quicklisp-quickstart:install)
+(ql:quickload "quicklisp-slime-helper")
+#+end_src
+
+#+begin_src emacs-lisp :tangle yes
+    (if (string-equal system-type "darwin")
+      (progn
+        (print "FIXME: CommonLisp (ros) on MacOS"))
+        ;(add-to-list 'exec-path "/usr/local/bin/")
+        ;(load (expand-file-name "~/.roswell/helper.el")))
+      (progn
+        (load (expand-file-name "/usr/lib/quicklisp/slime-helper.el"))
+        ;; Replace "sbcl" with the path to your implementation
+        (setq inferior-lisp-program "sbcl")))
+#+end_src
+
+*** Scheme
+
+For arch install the guile package.
+#+begin_src bash tangle: no
+sudo pacman -S guile
+#+end_src
+
+#+begin_src emacs-lisp :tangle yes
+  (use-package geiser
+    :config
+    (setq geiser-active-implementations '(guile)))
+#+end_src
+
+** HTML
+
+In order to have a fast and stable environment, I recommend using [[#lsp][LSP]] as a
+client for LSP servers and [[https://github.com/vscode-langservers/vscode-html-languageserver][vscode-html-languageserver]] as server.
+
+To use =vscode-html-languageserver= with GNU Emacs, you must first install it
+with the package manager of your operating system.
+
+Let's configure =emmet-mode=, to produce HTML from CSS-like selector:
+
+#+begin_src emacs-lisp :tangle yes
+  (use-package emmet-mode
+    :delight
+    :hook (css-mode sgml-mode web-mode))
+#+end_src
+
+** INI
+
+=ini-mode= does a good job of handling =.ini= files.
+
+#+begin_src emacs-lisp :tangle yes
+  (use-package ini-mode
+    :defer 0.4
+    :mode ("\\.ini\\'"))
+#+end_src
+
+** Java
+
+In order to have a fast and stable environment, I recommend using [[https://github.com/emacs-lsp/lsp-java][lsp-java]] as
+LSP client and [[https://projects.eclipse.org/projects/eclipse.jdt.ls][Eclipse JDT Language Server]] as LSP server.
+
+*NOTE:* before configuring =lsp-java=, don't forget to configure [[#lsp][lsp-mode]].
+
+Let's define the LSP client to use the LSP server:
+
+#+begin_src emacs-lisp :tangle yes
+  (use-package lsp-java
+    :after lsp
+    :hook (java-mode . lsp)
+    :custom (lsp-java-server-install-dir
+             (expand-file-name (format "%s/eclipse.jdt.ls/server" xdg-lib))))
+#+end_src
+
+*** Gradle
+
+Most of my Java projects are made with =gradle=. The configuration is easy
+enough:
+
+#+begin_src emacs-lisp :tangle yes
+  (use-package gradle-mode
+    :mode ("\\.java\\'" "\\.gradle\\'")
+    :bind (:map gradle-mode-map
+                ("C-c C-c" . gradle-build)
+                ("C-c C-t" . gradle-test))
+    :preface
+    (defun my/switch-to-compilation-window ()
+      "Switches to the *compilation* buffer after compilation."
+      (other-window 1))
+    :config
+    (advice-add 'gradle-build :after #'my/switch-to-compilation-window)
+    (advice-add 'gradle-test :after #'my/switch-to-compilation-window))
+#+end_src
+
+** JavaScript
+
+For my JavaScript configuration, I took my sources from the Nicolas Petton's
+blog which I found very well explained.
+
+[[https://emacs.cafe/emacs/javascript/setup/2017/04/23/emacs-setup-javascript.html][Setting up Emacs for JavaScript (part #1)]]
+[[https://emacs.cafe/emacs/javascript/setup/2017/05/09/emacs-setup-javascript-2.html][Setting up Emacs for JavaScript (part #2)]]
+
+I like to use [[https://prettier.io/][prettier]] to get my TypeScript code clean. To use it,
+don't forget to install it with your package manager.
+
+#+begin_src emacs-lisp :tangle yes
+  (use-package prettier-js
+    :delight
+    :custom (prettier-js-args '("--print-width" "100"
+                                "--single-quote" "true"
+                                "--trailing-comma" "all")))
+#+end_src
+
+*** =js2-mode=
+
+By default, GNU Emacs uses =js-mode= as major mode for JavaScript buffers and I
+prefer use =js2-mode= instead because of his abilities to parses buffers and
+builds an AST for things like syntax highlighting.
+
+#+begin_src emacs-lisp :tangle yes
+  (use-package js2-mode
+    :hook ((js2-mode . js2-imenu-extras-mode)
+           (js2-mode . prettier-js-mode))
+    :mode "\\.js\\'"
+    :custom (js-indent-level 2))
+#+end_src
+
+*** =js2-refactor=
+
+Provides powerful refactoring based on the AST generated by =js2-mode=.
+
+#+begin_src emacs-lisp :tangle yes
+  (use-package js2-refactor
+    :bind (:map js2-mode-map
+                ("C-k" . js2r-kill)
+                ("M-." . nil))
+    :hook ((js2-mode . js2-refactor-mode)
+           (js2-mode . (lambda ()
+                         (add-hook 'xref-backend-functions #'xref-js2-xref-backend nil t))))
+    :config (js2r-add-keybindings-with-prefix "C-c C-r"))
+#+end_src
+
+*** =xref-js2=
+
+Makes it easy to jump to function references or definitions.
+
+#+begin_src emacs-lisp :tangle yes
+  (use-package xref-js2 :defer 5)
+#+end_src
+
+*** =tern=
+
+Parses JavaScript files in a project and makes type inference to provide
+meaningful completion (with type clues) and cross-reference support.
+
+Unfortunately, =tern= has some problems with cross-references that explain why I
+am using =xref-js2= instead.
+
+#+begin_src emacs-lisp :tangle yes
+  (use-package tern
+    :ensure-system-package (tern . "npm install -g tern")
+    :bind (("C-c C-c" . compile)
+           :map tern-mode-keymap
+           ("M-." . nil))
+    :hook ((js2-mode . company-mode)
+           (js2-mode . tern-mode)))
+#+end_src
+
+Then, add a =.tern-project= file to the root of your project.
+
+Here is an example configuration for a project that uses =requirejs= and
+=jQuery=, without taking into account of the =bower_components= directory:
+
+#+begin_src json
+  {
+      "libs": [
+          "jquery"
+      ],
+      "loadEagerly": [
+          "./**/*.js"
+      ],
+      "dontLoad": [
+          "./bower_components/"
+      ],
+      "plugins": {
+          "requirejs": {
+              "baseURL": "./"
+          }
+      }
+  }
+#+end_src
+
+** JSON
+
+JSON is used a lot, especially in the web. Therefore, it is important to have a
+decent configuration to feel comfortable when handling such files.
+
+#+begin_src emacs-lisp :tangle yes
+  (use-package json-mode
+    :delight "J "
+    :mode "\\.json\\'"
+    :hook (before-save . my/json-mode-before-save-hook)
+    :preface
+    (defun my/json-mode-before-save-hook ()
+      (when (eq major-mode 'json-mode)
+        (json-pretty-print-buffer)))
+
+    (defun my/json-array-of-numbers-on-one-line (encode array)
+      "Prints the arrays of numbers in one line."
+      (let* ((json-encoding-pretty-print
+              (and json-encoding-pretty-print
+                   (not (loop for x across array always (numberp x)))))
+             (json-encoding-separator (if json-encoding-pretty-print "," ", ")))
+        (funcall encode array)))
+    :config (advice-add 'json-encode-array :around #'my/json-array-of-numbers-on-one-line))
+#+end_src
+
+** LaTeX
+
+I use LaTeX for my reports, CVs, summaries, etc.
+
+#+begin_src emacs-lisp :tangle yes
+  (use-package tex
+    :ensure auctex
+    :bind (:map TeX-mode-map
+                ("C-c C-o" . TeX-recenter-output-buffer)
+                ("C-c C-l" . TeX-next-error)
+                ("M-[" . outline-previous-heading)
+                ("M-]" . outline-next-heading))
+    :hook (LaTeX-mode . reftex-mode)
+    :preface
+    (defun my/switch-to-help-window (&optional ARG REPARSE)
+      "Switches to the *TeX Help* buffer after compilation."
+      (other-window 1))
+    :custom
+    (TeX-auto-save t)
+    (TeX-byte-compile t)
+    (TeX-clean-confirm nil)
+    (TeX-master 'dwim)
+    (TeX-parse-self t)
+    (TeX-PDF-mode t)
+    (TeX-source-correlate-mode t)
+    (TeX-view-program-selection '((output-pdf "PDF Tools")))
+    :config
+    (advice-add 'TeX-next-error :after #'my/switch-to-help-window)
+    (advice-add 'TeX-recenter-output-buffer :after #'my/switch-to-help-window)
+    ;; the ":hook" doesn't work for this one... don't ask me why.
+    (add-hook 'TeX-after-compilation-finished-functions 'TeX-revert-document-buffer))
+
+  (use-package bibtex
+    :after auctex
+    :hook (bibtex-mode . my/bibtex-fill-column)
+    :preface
+    (defun my/bibtex-fill-column ()
+      "Ensures that each entry does not exceed 120 characters."
+      (setq fill-column 120)))
+
+  (use-package company-auctex
+    :after (auctex company)
+    :config (company-auctex-init))
+
+  (use-package company-math :after (auctex company))
+#+end_src
+
+I want a TeX engine that can deal with Unicode and use any font I like.
+
+#+begin_src emacs-lisp :tangle yes
+  (setq-default TeX-engine 'xetex)
+#+end_src
+
+*** =reftex=
+
+Minor mode with distinct support for \label, \ref and \cite in LaTeX.
+
+#+begin_src emacs-lisp :tangle yes
+  (use-package reftex
+    :after auctex
+    :custom
+    (reftex-plug-into-AUCTeX t)
+    (reftex-save-parse-info t)
+    (reftex-use-multiple-selection-buffers t))
+#+end_src
+
+** Lua
+
+I rarely program in Lua, but when I do, =lua-mode= satisfies me amply.
+
+#+begin_src emacs-lisp :tangle yes
+  (use-package lua-mode
+    :delight "Λ "
+    :mode "\\.lua\\'"
+    :interpreter ("lua" . lua-mode))
+#+end_src
+
+** Markdown
+
+Before you can use this package, make sure you install =pandoc= on your
+operating system.
+
+#+begin_src emacs-lisp :tangle yes
+  (use-package markdown-mode
+    :ensure-system-package (pandoc . "yay -S pandoc")
+    :delight "μ "
+    :mode ("\\.markdown\\'" "\\.md\\'")
+    :custom (markdown-command "/usr/bin/pandoc"))
+
+  (use-package markdown-preview-mode
+    :after markdown-mode
+    :custom
+    (markdown-preview-javascript
+     (list (concat "https://github.com/highlightjs/highlight.js/"
+                   "9.15.6/highlight.min.js")
+           "<script>
+              $(document).on('mdContentChange', function() {
+                $('pre code').each(function(i, block)  {
+                  hljs.highlightBlock(block);
+                });
+              });
+            </script>"))
+    (markdown-preview-stylesheets
+     (list (concat "https://cdnjs.cloudflare.com/ajax/libs/github-markdown-css/"
+                   "3.0.1/github-markdown.min.css")
+           (concat "https://github.com/highlightjs/highlight.js/"
+                   "9.15.6/styles/github.min.css")
+
+           "<style>
+              .markdown-body {
+                box-sizing: border-box;
+                min-width: 200px;
+                max-width: 980px;
+                margin: 0 auto;
+                padding: 45px;
+              }
+
+              @media (max-width: 767px) { .markdown-body { padding: 15px; } }
+            </style>")))
+#+end_src
+
+** Python
+
+In order to have a fast and stable environment, I recommend to use [[https://github.com/andrew-christianson/lsp-python-ms][lsp-python-ms]]
+as LSP client and [[https://github.com/Microsoft/python-language-server][mspyls]] as LSP server as =mspyls= is faster than =pyls=.
+I use [[https://github.com/psf/black][black]] to reformat my Python buffer. Before use it, don't forget to
+install =python-black= in your system.
+
+To sort my Python imports, [[https://github.com/paetzke/py-isort.el][py-isort]] does a good job. Also, don't forget to
+install =python-isort= in your system.
+
+Automagically resolve imports (requires =importmagic= and =epc=)
+
+Let's take a look to my Python configuration:
+
+#+begin_src emacs-lisp :tangle yes
+  (use-package lsp-pyright
+    :if (executable-find "pyright")
+    :hook (python-mode . (lambda ()
+                           (require 'lsp-pyright)
+                           (lsp))))
+
+  (use-package lsp-python-ms
+    :defer 0.3
+    :custom (lsp-python-ms-auto-install-server t))
+
+  (use-package python
+    :delight "π "
+    :bind (("M-[" . python-nav-backward-block)
+           ("M-]" . python-nav-forward-block))
+    :preface
+    (defun python-remove-unused-imports()
+      "Removes unused imports and unused variables with autoflake."
+      (interactive)
+      (if (executable-find "autoflake")
+          (progn
+            (shell-command (format "autoflake --remove-all-unused-imports -i %s"
+                                   (shell-quote-argument (buffer-file-name))))
+            (revert-buffer t t t))
+        (warn "python-mode: Cannot find autoflake executable."))))
+
+  (use-package python-black
+    :demand t
+    :after python))
+
+  (use-package py-isort
+    :after python
+    :hook ((python-mode . pyvenv-mode)))
+
+  (use-package pyenv-mode
+    :after python
+    :hook ((python-mode . pyenv-mode)
+           (projectile-switch-project . projectile-pyenv-mode-set))
+    :custom (pyenv-mode-set "3.8.5")
+    :preface
+    (defun projectile-pyenv-mode-set ()
+      "Set pyenv version matching project name."
+      (let ((project (projectile-project-name)))
+        (if (member project (pyenv-mode-versions))
+            (pyenv-mode-set project)
+          (pyenv-mode-unset)))))
+
+  (use-package pyvenv
+    :after python
+    :hook ((python-mode . pyvenv-mode)
+           (python-mode . (lambda ()
+                            (if-let ((pyvenv-directory (find-pyvenv-directory (buffer-file-name))))
+                                (pyvenv-activate pyvenv-directory))
+                            (lsp))))
+    :custom
+    (pyvenv-default-virtual-env-name "env")
+    (pyvenv-mode-line-indicator '(pyvenv-virtual-env-name ("[venv:"
+                                                           pyvenv-virtual-env-name "]")))
+    :preface
+    (defun find-pyvenv-directory (path)
+      "Checks if a pyvenv directory exists."
+      (cond
+       ((not path) nil)
+       ((file-regular-p path) (find-pyvenv-directory (file-name-directory path)))
+       ((file-directory-p path)
+        (or
+         (seq-find
+          (lambda (path) (file-regular-p (expand-file-name "pyvenv.cfg" path)))
+          (directory-files path t))
+         (let ((parent (file-name-directory (directory-file-name path))))
+           (unless (equal parent path) (find-pyvenv-directory parent))))))))
+
+  (use-package importmagic
+    :config
+    (add-hook 'python-mode-hook 'importmagic-mode))
+#+end_src
+
+** Shell-script
+
+A recent thing when you create/edit a shell script file is to automatically
+grant it execution rights (with =chmod +x=).
+
+The snippet below ensures that the execution right is automatically granted to
+save a shell script file that begins with a =#!= shebang:
+
+#+begin_src emacs-lisp :tangle yes
+  (use-package sh-script
+    :ensure nil
+    :hook (after-save . executable-make-buffer-file-executable-if-script-p))
+#+end_src
+
+** SQL
+
+=sql-indent= gives me the possibility to easily manage =.sql= files.
+
+#+begin_src emacs-lisp :tangle yes
+  (use-package sql-indent
+    :after (:any sql sql-interactive-mode)
+    :delight sql-mode "Σ ")
+#+end_src
+
+** XML
+
+Unfortunately, XML is still used, especially for creating web services in SOAP.
+However, =xml-mode= exists to help us:
+
+#+begin_src emacs-lisp :tangle yes
+  (use-package xml-mode
+    :ensure nil
+    :mode ("\\.wsdl\\'" "\\.xsd\\'"))
+#+end_src
+
+** YAML
+
+=yaml-mode= gives me the possibility to easily manage =.yml= files.
+
+#+begin_src emacs-lisp :tangle yes
+  (use-package yaml-mode
+    :delight "ψ "
+    :mode "\\.yml\\'"
+    :interpreter ("yml" . yml-mode))
 #+end_src
 
 * Backups
@@ -894,112 +1522,6 @@ Function to sort all entires in the current buffer, recursively.
       (setenv "PKG_CONFIG_PATH"
               "/usr/local/lib/pkgconfig:/usr/local/opt/libffi/lib/pkgconfig"))
     (pdf-tools-install t nil t t))
-#+end_src
-
-* Programming Modes
-** Arduino
-
-#+begin_src emacs-lisp :tangle yes
-(use-package arduino-mode)
-#+end_src
-
-** C++
-
-#+begin_src emacs-lisp :tangle yes
-  ;; consider .h files as c++ rather than c by default
-  (add-to-list 'auto-mode-alist '("\\.h\\'" . c++-mode))
-  (global-set-key (kbd "C-x c") 'compile)
-#+end_src
-
-** Lisp
-
-*** Common Lisp
-
-For arch install the sbcl and quicklisp packages.
-#+begin_src bash tangle: no
-sudo pacman -S sbcl
-yay -S quicklisp
-echo '(load "/usr/lib/quicklisp/setup")' > ~/.sbclrc
-#+end_src
-
-Then within sbcl install SLIME
-#+begin_src tangle :no
-(quicklisp-quickstart:install)
-(ql:quickload "quicklisp-slime-helper")
-#+end_src
-
-#+begin_src emacs-lisp :tangle yes
-    (if (string-equal system-type "darwin")
-      (progn
-        (print "FIXME: CommonLisp (ros) on MacOS"))
-        ;(add-to-list 'exec-path "/usr/local/bin/")
-        ;(load (expand-file-name "~/.roswell/helper.el")))
-      (progn
-        (load (expand-file-name "/usr/lib/quicklisp/slime-helper.el"))
-        ;; Replace "sbcl" with the path to your implementation
-        (setq inferior-lisp-program "sbcl")))
-#+end_src
-
-*** Scheme
-
-For arch install the guile package.
-#+begin_src bash tangle: no
-sudo pacman -S guile
-#+end_src
-
-#+begin_src emacs-lisp :tangle yes
-  (use-package geiser
-    :config
-    (setq geiser-active-implementations '(guile)))
-#+end_src
-
-** Markdown
-
-#+begin_src emacs-lisp :tangle yes
-(use-package markdown-mode
-:ensure t
-:commands (markdown-mode gfm-mode)
-:mode (("README\\.md\\'" . gfm-mode)
-("\\.md\\'" . markdown-mode)
-("\\.markdown\\'" . markdown-mode))
-:init (setq markdown-command "multimarkdown"))
-#+end_src
-
-** Python
-
-#+begin_src emacs-lisp :tangle yes
-(use-package python
-  :ensure nil
-  :hook (inferior-python-mode . (lambda ()
-                                  (process-query-on-exit-flag
-                                   (get-process "Python"))))
-  :init
-  ;; Disable readline based native completion
-  (setq python-shell-completion-native-enable nil)
-  :config
-  ;; Default to Python 3. Prefer the versioned Python binaries since some
-  ;; systems stupidly make the unversioned one point at Python 2.
-  (when (and (executable-find "python2")
-             (string= python-shell-interpreter "python2"))
-    (setq python-shell-interpreter "python2"))
-
-  ;; Env vars
-  (with-eval-after-load 'exec-path-from-shell
-    (exec-path-from-shell-copy-env "PYTHONPATH"))
-
-  ;; Live Coding in Python
-  (use-package live-py-mode)
-
-  (use-package python-black
-    :demand t
-    :after python))
-#+end_src
-
-Automagically resolve imports (requires importmagic and epc)
-#+begin_src emacs-lisp :tangle yes
-(use-package importmagic
-    :config
-    (add-hook 'python-mode-hook 'importmagic-mode))
 #+end_src
 
 * Snippets
