--- a/config.org
+++ b/config.org
@@ -749,20 +749,8 @@ Automagically resolve imports (requires =importmagic= and =epc=)
 Let's take a look to my Python configuration:
 
 #+begin_src emacs-lisp :tangle yes
-  (use-package lsp-pyright
-    :if (executable-find "pyright")
-    :hook (python-mode . (lambda ()
-                           (require 'lsp-pyright)
-                           (lsp))))
-
-  (use-package lsp-python-ms
-    :defer 0.3
-    :custom (lsp-python-ms-auto-install-server t))
-
   (use-package python
     :delight "π "
-    :bind (("M-[" . python-nav-backward-block)
-           ("M-]" . python-nav-forward-block))
     :preface
     (defun python-remove-unused-imports()
       "Removes unused imports and unused variables with autoflake."
@@ -774,9 +762,19 @@ Let's take a look to my Python configuration:
             (revert-buffer t t t))
         (warn "python-mode: Cannot find autoflake executable."))))
 
+  (use-package lsp-pyright
+    :if (executable-find "pyright")
+    :hook (python-mode . (lambda ()
+                           (require 'lsp-pyright)
+                           (lsp))))
+
+  (use-package lsp-python-ms
+    :defer 0.3
+    :custom (lsp-python-ms-auto-install-server t))
+
   (use-package python-black
     :demand t
-    :after python))
+    :after python)
 
   (use-package py-isort
     :after python
