--- a/config.org
+++ b/config.org
@@ -1700,20 +1700,20 @@ Group jump-to-files commands.
       ("ao" (find-file "~/.personal/agenda/organizer.org") "organizer")
       ("ap" (find-file "~/.personal/agenda/people.org") "people")
       ("ar" (find-file "~/.personal/agenda/routine.org") "routine")
-      ("as" (find-file "~/.personal/agenda/school.org") "school"))
+      ("aw" (find-file "~/.personal/agenda/work.org") "work"))
      "Config"
      (("ca" (find-file (format "%s/alacritty/alacritty.yml" xdg-config)) "alacritty")
       ("cA" (find-file (format "%s/sh/aliases" xdg-config)) "aliases")
       ("cd" (find-file (format "%s/dunst/dunstrc" xdg-config)))
-      ("ce" (find-file "~/.emacs.d/config.org") "emacs")
+      ("ce" (find-file (format "%s/emacs/config.org" xdg-config)) "emacs")
       ("cE" (find-file (format "%s/sh/environ" xdg-config)) "environ")
+      ("ci" (find-file (format "%s/i3/config" xdg-config)) "i3")
       ("cn" (find-file (format "%s/neofetch/config.conf" xdg-config)) "neofetch")
       ("cq" (find-file (format "%s/qutebrowser/config.py" xdg-config)) "qutebrowser")
-      ("cr" (find-file (format "%s/ranger/rc.conf" xdg-config)) "ranger")
       ("cs" (find-file (format "%s/sway/config" xdg-config)) "sway")
       ("ct" (find-file (format "%s/tmux/tmux.conf" xdg-config)) "tmux")
-      ("cw" (find-file (format "%s/waybar/config" xdg-config)) "waybar")
-      ("cW" (find-file (format "%s/wofi/config" xdg-config)) "wofi")
+      ("cp" (find-file (format "%s/polybar/simple-black" xdg-config)) "polybar")
+      ("cr" (find-file (format "%s/rofi/config.rasi" xdg-config)) "rofi")
       ("cx" (find-file (format "%s/sh/xdg" xdg-config)) "xdg"))
      "Other"
      (("ob" (find-file "~/.personal/other/books.org") "book")
